test/good/lambdas/multiline05.px

b = false

func f(Bool x) ()->Void def
    return lambda def
        b = x

g = f(true)
print b
g()
print b
