test/bad/functions/lambda03.px

func f(Char->Char g) Char def
    return g('x')

f(lambda -> 'y')
